# RMPC-Auto-Theme

./: .gitignore  .last_art.sha256  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  STANDALONE.md  build.sh  issue-scope-and-statement.md  on_song_change.sh  rmpc_playing_row_style.patch  rmpc_tab_redraw.patch  rmpc_tab_redraw_explanation.md
RAG/: PROGRESS.md
RAG/AI-EPIC/: AI-EPIC-001-dynamic-album-art-theme-generation.md  AI-EPIC-002-phase-two-theme-polish.md  AI-EPIC-002-scrollbar-contingency.md  AI-EPIC-003-deterministic-pairwise-and-theme-overlay.md
RAG/AI-IMP/: AI-IMP-001-rust-cli-theme-generator-structure.md  AI-IMP-002-color-mapping-algorithm.md  AI-IMP-003-ron-theme-generation.md  AI-IMP-004-shell-wrapper-script.md  AI-IMP-005-integration-testing.md  AI-IMP-006-error-handling-fallback.md  AI-IMP-007-scrollbar-gutter-mitigation.md  AI-IMP-008-highlight-contrast-guardrails.md  AI-IMP-009-regression-testing-and-docs.md  AI-IMP-010-rmpc-contingency-plan.md  AI-IMP-011-explicit-background-styles.md  AI-IMP-012-image-hash-short-circuit.md  AI-IMP-013-pairwise-accent-active-solver.md  AI-IMP-014-oklch-adjustment-utilities.md  AI-IMP-015-base-theme-overlay-and-config.md  AI-IMP-016-cargo-flamegraph-profiling.md  (+4 more)
bench-reports/: comparison.json  js-results.json  latest.md  observable-baseline.json  parity.json  rust-results.json  samples-manifest-1.json  samples-manifest.json  wasm-bench.json
src/: color.rs  lib.rs  rmpc_theme_gen.rs
test-results/: TEST-RESULTS.md  run-tests.sh  test-el-get.json  test-el-get.ron
(+22 files in other folders)
